[build] copySecret firebase 서비스키도 가져오도록 수정

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ tasks.register('copySecret', Copy) {
     description = 'Copy submodules to project'
     from('bada-on-config') {
         include('*.yml')
+        include('*.json')
     }
     into('src/main/resources')
 }
