--- a/.github/workflows/deploy-on-server.yml
+++ b/.github/workflows/deploy-on-server.yml
@@ -61,6 +61,8 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: 개발 서버 배포
+        env:
+          FIREBASE_KEY: ${{ secrets.FIREBASE_KEY }}
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_AWS_EC2_PUBLIC_IP }}
@@ -73,5 +75,5 @@ jobs:
             docker rm develop-server
             docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
             docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
-            docker run --name develop-server -d -p 80:8080 -e SPRING_PROFILES_ACTIVE=dev -e FIREBASE_KEY="${{ secrets.FIREBASE_KEY }}" ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
+            docker run --name develop-server -d -p 80:8080 -e SPRING_PROFILES_ACTIVE=dev -e FIREBASE_KEY="$FIREBASE_KEY" ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
             docker image prune -f
