[build] firebase 환경변수 오류 수정

--- a/.github/workflows/deploy-on-server.yml
+++ b/.github/workflows/deploy-on-server.yml
@@ -75,5 +75,5 @@ jobs:
             docker rm develop-server
             docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
             docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
-            docker run --name develop-server -d -p 80:8080 -e SPRING_PROFILES_ACTIVE=dev -e FIREBASE_KEY="$FIREBASE_KEY" ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
+            docker run --name develop-server -d -p 80:8080 -e SPRING_PROFILES_ACTIVE=dev -v "$(pwd)/firebase-key.json:/app/config/firebase-key.json" ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
             docker image prune -f
